# mvs-texturing

./: .gitignore  CMakeLists.txt
apps/texrecon/: CMakeLists.txt  arguments.cpp  arguments.h  texrecon.cpp
elibs/: CMakeLists.txt
libs/tex/: CMakeLists.txt  build_obj_model.cpp  generate_texture_patches.cpp  generate_texture_views.cpp  local_seam_leveling.cpp  material_lib.cpp  material_lib.h  texture_atlas.cpp  texture_atlas.h  texture_patch.cpp  texture_patch.h  texture_view.cpp  texture_view.h  texturing.h
